--- a/feladat_1/teglatest.html
+++ b/feladat_1/teglatest.html
@@ -3,30 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="teglatest.js" defer></script>
+    <script src="teglatest.js" ></script>
     <title>Téglatest</title>
 </head>
 <body>
     <label for="a">Írja be az a adatot:</label>
-    <input type="text" id="a">
+    <input type="number" value="10.4" id="a">
     <br>
 
     <label for="b">Írja be a b adatot: </label>
-    <input type="text" id="b">
+    <input type="number" value="13.5" id="b">
     <br>
 
     <label for="c">Írja be a c adatot: </label>
-    <input type="text" id="c">
+    <input type="number" value= "8.2" id="c">
     <br>
 
-    <button type="submit" id="megjelenítés">Küldés</button>  
+    <button onclick="megjelenítés()">Számolás</button>  
     <br>
-    
     <p id="output1"></p>
     <p id="output2"></p>
+    </form>
 
-    <script>
-
-    </script>
 </body>
 </html>
