--- a/feladat_2/seconds_in_a_day.html
+++ b/feladat_2/seconds_in_a_day.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="seconds_in_a_day.js"></script>
     <title>Seconds in a day</title>
 </head>
 <body>
+    <label for="currentHours">Írja be az órát:</label>
+    <input type="number" value="14" id="currentHours">
+    <br>
+
+    <label for="currentMinutes">Írja be a percet: </label>
+    <input type="number" value="34" id="currentMinutes">
+    <br>
+
+    <label for="currentSeconds">Írja be a másodpercet: </label>
+    <input type="number" value= "42" id="currentSeconds">
+    <br>
+
+    <button onclick="megjelenítés()">Számolás</button>  
     <p id="output"></p>
-
-    <script>
-        let currentHours = 14;
-        let currentMinutes = 34;
-        let currentSeconds = 42;
-
-        let hourToSeconds = currentHours * 60 * 60; //50400
-        let minuteToSeconds = currentMinutes * 60; //2040
-        let wholeDay = 24 * 60 * 60; //86400
-        let remainingSeconds = wholeDay - (hourToSeconds + minuteToSeconds + currentSeconds);
-
-        document.getElementById("output").innerHTML = `This is how much minute left: ${remainingSeconds} `;
-    </script>
 </body>
 </html>
