--- a/feladat_5/leap_year.html
+++ b/feladat_5/leap_year.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="grade_calculator.js"></script>
-    <title>Grade calculator</title>
+    <script src="leap_year.js"></script>
+    <title>Leap year</title>
 </head>
 <body>
-    <label for="grade">Írja be az érdemjegyet: </label>
-    <input type="number" id="grade">
+    <label for="year">Adjon meg egy évszámot: </label>
+    <input type="number" id="year">
     <br>
     <button onclick="megjelenítés()">Számolás</button>
     <div id="output"></div>
