--- a/feladat_7/for_loop_04.html
+++ b/feladat_7/for_loop_04.html
@@ -7,6 +7,10 @@
     <title>For loop</title>
 </head>
 <body>
-    
+    <label for="word"></label>
+    <input type="text" id="word">
+    <br>
+    <button onclick="megjelenites()">Kiírás</button>
+    <div id="output"></div>
 </body>
 </html>
