--- a/feladat_7/for_loop_04.html
+++ b/feladat_7/for_loop_04.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="for_loop_04.js"></script>
-    <title>For loop</title>
+    <title>For loop 04</title>
 </head>
 <body>
-    <label for="word"></label>
+    <label for="word">Írj be egy szót!</label>
     <input type="text" id="word">
     <br>
     <button onclick="megjelenites()">Kiírás</button>
