--- a/feladat_2/seconds_in_a_day.html
+++ b/feladat_2/seconds_in_a_day.html
@@ -7,6 +7,7 @@
     <title>Seconds in a day</title>
 </head>
 <body>
+    <h1>Seconds in a day</h1>
     <label for="currentHours">Írja be az órát:</label>
     <input type="number" value="14" id="currentHours">
     <br>
