--- a/feladat_3/bmi.html
+++ b/feladat_3/bmi.html
@@ -7,6 +7,7 @@
     <title>BMI</title>
 </head>
 <body>
+    <h1>BMI</h1>
     <label for="mass_in_kg">Írja be testsúlyt kilógrammban:</label>
     <input type="number" value="81.2" id="mass_in_kg">
     <br>
