--- a/feladat_4/grade_calculator.html
+++ b/feladat_4/grade_calculator.html
@@ -7,6 +7,7 @@
     <title>Grade calculator</title>
 </head>
 <body>
+    <h1>Grade calculator</h1>
     <label for="grade">Írja be az érdemjegyet: </label>
     <input type="number" id="grade">
     <br>
