--- a/feladat_6/rock_paper_scissors.html
+++ b/feladat_6/rock_paper_scissors.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>Rock paper scissors</h1>
     <label for="player1">Az első játékos írjon be egy számot 1-től 3-ig. [Kő, papír, olló]</label>
     <input type="number" name="" id="player1">
     <br>
