--- a/feladat_7/for_loop_04.html
+++ b/feladat_7/for_loop_04.html
@@ -7,6 +7,7 @@
     <title>For loop 04</title>
 </head>
 <body>
+    <h1>For loop 04</h1>
     <label for="word">Írj be egy szót!</label>
     <input type="text" id="word">
     <br>
