--- a/feladat_9/for_loop_12.html
+++ b/feladat_9/for_loop_12.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="for_loop_06.js"></script>
-    <title>for_loop_06</title>
+    <script src="for_loop_12.js"></script>
+    <title>For loop 12</title>
 </head>
 <body>
-    <h1>For loop 06</h1>
-    <label for="number">Írj be egy számot!</label>
-    <input type="text" value="3" id="number">
+    <h1>For loop 12</h1>
+    <label for="number">Írj be egy számot:</label>
+    <input type="number" value="268" name="" id="number">
     <br>
     <button onclick="megjelenites()">Küldés</button>
     <div id="output"></div>
