--- a/feladat_1/teglatest.html
+++ b/feladat_1/teglatest.html
@@ -7,6 +7,7 @@
     <title>Téglatest</title>
 </head>
 <body>
+    <h1>Téglatest</h1>
     <label for="a">Írja be az a adatot:</label>
     <input type="number" value="10.4" id="a">
     <br>
