--- a/feladat_5/leap_year.html
+++ b/feladat_5/leap_year.html
@@ -7,6 +7,7 @@
     <title>Leap year</title>
 </head>
 <body>
+    <h1>Leap year</h1>
     <label for="year">Adjon meg egy évszámot: </label>
     <input type="number" id="year">
     <br>
